--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.6",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
